# pethick-site-hakyll

./: .gitignore  CNAME  README.md  about.md  deploy.sh  illustrations.sketch  index.html  index.md  livereload.js  package.json  pandoc-crossref.yaml  pethick-site.cabal  site.hs  stack.yaml
about/: index.html
archive/: index.html
bib/: 2018-05-22-io-model.bib  2019-10-29-FTRL.bib  2019-11-02-FTRL.bib  2019-11-03-russell-talk.bib  2020-01-06-hedge-and-bandit.bib  2020-01-07-gp-mw.bib  2020-05-26-bayesian-logistic-regression.bib  2020-06-04-acceleration-perspectives.bib
css/: custom.css  hyde.css  poole.css
drafts/: 2019-11-10-adaptivity.md  2019-11-13-unbiased-gp.md  2019-11-14-differential-privacy-and-robustness.md  2019-11-16-filtration.md  2019-11-16-polynomial-gans.md  2019-12-11-gp-mw.md  2019-19-12-distribution-overview.md  2019-21-12-pylinalg.md  2020-02-01-boltzmann-md.md  2020-02-01-education.md  2020-02-01-interactive_derivatives.md  NeurIPS2019.md  christmas-puzzle.md  diatom.ipynb
posts/: 2018-05-22-io-model.md  2019-10-29-FTRL.md  2019-11-01-russell-talk.md  2019-11-02-FTRL.md  2019-11-03-russell-talk.md  2019-11-16-caroline-uhler.md  2019-21-12-pylinalg.md  2020-01-06-hedge-and-bandit.md  2020-01-07-gp-mw.md  2020-05-15-gradientboosting.md  2020-05-26-bayesian-logistic-regression.md  2020-06-04-acceleration-perspectives.md  2020-06-04-acceleration-with-potential-function.md  2020-06-21-games.md
publications/: 2021-12-01-overparameterization.md  2021-12-01-sifting-through-noise.md  2022-01-01-escaping-limit-cycles.md  index.html
(+41 files in other folders)
