name:               pethick-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , pandoc                >= 1.15   && < 1.20
                  , containers            >= 0.5    && < 0.10
                  , aeson                 >= 1.0    && < 1.2
                  , directory             >= 1.2    && < 1.4
                  , filepath              >= 1.3    && < 1.6
                  , text                  >= 1.2    && < 1.3
                  , latex-formulae-image  >= 0.1.1  && < 0.3
                  , latex-formulae-pandoc >= 0.2    && < 0.4
                  , latex-formulae-hakyll >= 0.2    && < 0.4
                  , unordered-containers  >= 0.2.7  && < 0.2.9
                  , tagsoup               >= 0.14.2 && < 0.15
  ghc-options:      -threaded
  default-language: Haskell2010
